# telefam

./: .eslintignore  .eslintrc  .gitignore  .stylelintignore  .stylelintrc.json  CLAUDE.md  README.md  jest.config.js  package-lock.json  package.json  test-app.js  test_settings.txt  tsconfig.json  webpack.config.ts
dev/: createStatoscopeComment.js
public/: statoscope-report.html
src/: config.ts  index.html  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/@types/: global.d.ts
src/components/: App.module.scss  App.tsx
src/global/: cache.ts  index.ts  init.ts  initialState.ts  intervals.ts
src/hooks/: useAppLayout.ts  useAsync.ts  useBlur.ts  (+80 more)
tauri-plugin-safe-area/: Cargo.toml  README.md  package.json
tauri-plugin-safe-area/examples/tauri-app/: package.json
tauri-plugin-safe-area/examples/tauri-app/src/: App.svelte
tauri-plugin-safe-area/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-safe-area/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-safe-area/guest-js/: index.ts
tauri-plugin-safe-area/ios/: Package.swift
tauri-plugin-safe-area/ios/Sources/: SafeAreaPlugin.swift
tauri-plugin-safe-area/permissions/: default.toml
tauri-plugin-safe-area/permissions/autogenerated/: reference.md
tauri-plugin-safe-area/permissions/autogenerated/commands/: apply_constraints.toml  get_safe_area_insets.toml  set_safe_area_color.toml
tauri-plugin-safe-area/permissions/schemas/: schema.json
tauri-plugin-safe-area/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+867 files in other folders)
