[package]
name = "tauri-plugin-safe-area"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.71"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-safe-area"

[dependencies]
tauri = { version = "2.0.0-rc.17" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.13", features = ["build"] }
